compiler/testData/multiplatform/classScopes/constructorIncorrectSignature/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/constructorIncorrectSignature/jvm.kt:1:14: error: 'actual class Foo : Any' has no corresponding members for expected class members:

    expect constructor(s: String): Foo

    The following declaration is incompatible because parameter types are different:
        actual constructor(s: Array<String>): Foo

actual class Foo {
             ^^^
compiler/testData/multiplatform/classScopes/constructorIncorrectSignature/jvm.kt:2:5: error: 'actual constructor(s: Array<String>): Foo' has no corresponding expected declaration
The following declaration is incompatible because parameter types are different:
    expect constructor(s: String): Foo

    actual constructor(s: Array<String>)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
